--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(PROJECT_NAME main)
+set(PROJECT_NAME stereo)
 project(${PROJECT_NAME})
 
 cmake_minimum_required(VERSION 3.24)
@@ -10,10 +10,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -D__MACOSX_CORE__")
 
 
-file (GLOB SOURCES "src/*.cpp" "johnson/*.cpp")
+file (GLOB SOURCES "src/*.cpp" "stereo/*.cpp")
 add_executable( ${PROJECT_NAME} ${SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE src)
-target_include_directories(${PROJECT_NAME} PRIVATE johnson)
+target_include_directories(${PROJECT_NAME} PRIVATE stereo)
 
 # Link CoreAudio
 find_library(CoreAudioFwk CoreAudio REQUIRED)
